ffmpeg: avoid apics for video output if possible

Fixes Ticket1714

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>